package collection

import (
	"context"
	"fmt"

	pb "github.com/accretional/collector/gen/collector"
)

// CollectionRepoService provides a persistent implementation of the CollectionRepo interface.
// It uses a Store (like SqliteStore) for the underlying data storage.
type CollectionRepoService struct {
	store Store
}

// NewCollectionRepoService creates a new service instance.
func NewCollectionRepoService(store Store) *CollectionRepoService {
	return &CollectionRepoService{store: store}
}

// CreateCollection creates a new collection.
func (s *CollectionRepoService) CreateCollection(ctx context.Context, collection *pb.Collection) (*pb.CreateCollectionResponse, error) {
	// Validate input
	if collection == nil {
		return nil, fmt.Errorf("collection cannot be nil")
	}

	// For simplicity, we'll use the collection's name as its ID.
	// In a real-world scenario, you'd likely generate a unique ID.
	id := fmt.Sprintf("%s/%s", collection.Namespace, collection.Name)

	// NOTE: We don't store the collection metadata as a record in the store
	// because it would pollute the data records. The metadata is tracked
	// in memory by the DefaultCollectionRepo.

	return &pb.CreateCollectionResponse{
		Status:       &pb.Status{Code: 200, Message: "OK"},
		CollectionId: id,
	}, nil
}

// Discover finds collections based on the provided criteria.
func (s *CollectionRepoService) Discover(ctx context.Context, req *pb.DiscoverRequest) (*pb.DiscoverResponse, error) {
	// This is a placeholder implementation. A real implementation would need
	// to query the underlying store based on the request's filters.
	return &pb.DiscoverResponse{
		Status: &pb.Status{Code: 501, Message: "Not Implemented"},
	}, nil
}

// Route directs a request to the appropriate collection server.
func (s *CollectionRepoService) Route(ctx context.Context, req *pb.RouteRequest) (*pb.RouteResponse, error) {
	// This is a placeholder implementation. A real implementation would need
	// to look up the collection's server endpoint from the store.
	return &pb.RouteResponse{
		Status: &pb.Status{Code: 501, Message: "Not Implemented"},
	}, nil
}

// SearchCollections searches across multiple collections.
func (s *CollectionRepoService) SearchCollections(ctx context.Context, req *pb.SearchCollectionsRequest) (*pb.SearchCollectionsResponse, error) {
	// This is a placeholder implementation. A real implementation would need
	// to perform a federated search across the specified collections.
	return &pb.SearchCollectionsResponse{
		Status: &pb.Status{Code: 501, Message: "Not Implemented"},
	}, nil
}
